Feature/business (#184)
* add new metrics, pull space usage reporter into new metrics job, add new method and test to accounts model

* remove user_stats endpoint as it is now redundant
